--- a/css/form_styles.css
+++ b/css/form_styles.css
@@ -1,16 +1,18 @@
 body{
 	background-color:#F2C44C;
-	font: 1em sans-serif;
+	font:1em sans-serif;
 }
 
-form,h1{
+form{
 	margin: 0 auto;
 	width: 30%;
 	padding: 2em;
     text-align:left;
 	
 }
-
+h1{
+	text-align:center;
+}
 ul{
 	list-style:none;
 	padding:0;
